[gd_scene load_steps=4 format=3 uid="uid://bb2sx2yp5y32l"]

[ext_resource type="Script" uid="uid://csucithlqpack" path="res://scripts/game_over.gd" id="1_wqhvx"]
[ext_resource type="FontFile" uid="uid://biqtga8moh7ah" path="res://fonts/lilita_one_regular.ttf" id="2_tbwuq"]

[sub_resource type="LabelSettings" id="LabelSettings_racf3"]
font = ExtResource("2_tbwuq")
font_size = 30
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqhvx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9882353, 0.49803922, 0.49803922, 0.5882353)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -264.0
offset_right = 137.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Game Over"
label_settings = SubResource("LabelSettings_racf3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -360.0
offset_right = 137.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Final Score: "
label_settings = SubResource("LabelSettings_racf3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -328.0
offset_right = 137.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "High Score: "
label_settings = SubResource("LabelSettings_racf3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -60.0
offset_right = 32.5
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = 40.0
offset_right = 45.5
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "MainMenu"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -220.0
offset_right = 21.0
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
